# nethobench

./: .gitignore  LICENSE  README.md  pyproject.toml
data/behavioural/: gt.parquet
docs/: final_score_rerun_commands.md
nethobench/: __init__.py  calculation.py  cli.py  cross.py  etho.py  fidelity.py  helpers.py  neuro.py  synthetic.py
nethobench/analysis/: __init__.py  additional_neuro_metrics.py  composite_scores.py  cross_reporting.py  direct_neuro_metrics.py  etho_reporting.py  final_implementation_benchmark.py  neuro_analysis.py  neuro_metrics_core_script.py  neuro_metrics_instant_script.py  neuro_reporting.py  neuro_sanity_checks_real_data.py  neuro_scoring.py  neurobench_core_script.py  rebuild_neuro_score_notebook.py  refined_neuro_metric_replacements.py  score_definitions.py  sensitive_metric_candidates.py  synthetic_validation.py  synthetic_validation_biophysical.py
nethobench/cli/: __init__.py  __main__.py  cross_cli.py  etho_cli.py  main.py  neuro_cli.py  synthetic_cli.py  utils.py
nethobench/cross/: __init__.py  metrics.py  pipeline.py  reporting.py
nethobench/etho/: __init__.py  metrics.py  pipeline.py  reporting.py
nethobench/legacy/: __init__.py  legacy_metrics.py  legacy_neuro_core_script.py
nethobench/neuro/: __init__.py  fidelity.py  pipeline.py  reporting.py
nethobench/notebooks/: behavior_metrics.ipynb  behavior_metrics.py  cross_modal_metrics.ipynb  cross_modal_metrics.txt  (+3 more)
notebooks/: nethobench_quickstart.ipynb
scripts/: calculate_scores_and_compare.py  create_outputs.py  filter_preds.py  run_full_project_rerun.sh
(+70 files in other folders)
