[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nethobench"
version = "0.1.0"
description = "Unified benchmark for neural, behavioral, and cross-modal (neural↔behavior) plausibility."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "NethoBench contributors"}]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "umap-learn>=0.5",
    "pyarrow>=10.0",
    "ripser>=0.6.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
nethobench = "nethobench.cli:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true